# firefly_swarm

./: CMakeLists.txt  LICENSE  package.xml  readme.md
.github/workflows/: main.yml
include/firefly_swarm/: master.hpp  robot.hpp
launch/: gazebo.launch.py  robot_state_publisher.launch.py
models/red_box/: model.sdf
models/wall/: model.sdf
results/: cppcheck_result.txt  cpplint_result.txt
scripts/: get_threshold.py
src/: main.cpp  master.cpp  robot.cpp
test/: test.cpp
urdf/: turtlebot.csv  turtlebot3_burger.urdf.xacro
worlds/: disaster.world  maze.world  multi_object.world  object.world  red_box.world  slam.world  slam_1.world
